<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.eliminar.EliminarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo_eliminar"
            android:textSize="30sp" />


        <ImageView
            android:id="@+id/ivFotoBusc"
            android:layout_width="196dp"
            android:layout_height="171dp"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_iv"
            app:srcCompat="@drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:hint="@string/noCtrol">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tIETNoctrlel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnBuscarel"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/buscar"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNombreel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/nombre"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvEdadel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/edad"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvSexoel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/sexo"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvFechael"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/fecha_inc"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvCarrerael"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/carrera"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvStatusel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:text="@string/status"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnLimpiarel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/limpiar_na"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/eliminar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnBaja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/baja_temp"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>